# SQLCAP

./: .gitignore  Cargo.toml  README-body-injection.md  README.md
examples/: quick_scan.sh  test_scan.sh
payloads/: headers.txt  sqli_payloads.txt  test.txt
src/: lib.rs  main.rs
src/cli/: ui.rs
src/core/: csrf.rs  logger.rs  mod.rs  models.rs  scanner.rs
src/handlers/: cli_handler.rs
src/infra/: file_reader.rs
src/services/: mod.rs  scan_service.rs
src/shared/: ui.rs
