[package]
name = "sqlcap"
version = "0.1.0"
edition = "2021"
description = "Scanner CLI para detecção de vulnerabilidades SQL Injection"
authors = ["Giovanni"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.75"
colored = "2.0.4"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
scraper = "0.18.1"
urlencoding = "2.1.3"
